[package]
name = "binms"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.1"
display-bytes = { path = "../display-bytes" }
from-to-repr = { version = "0.2.2", features = ["from_to_other"] }
serde = { version = "1.0", features = ["derive"], optional = true }
tracing = { version = "0.1" }

[features]
serde = ["dep:serde", "display-bytes/serde"]
