[package]
name = "expandms"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.1"
display-bytes = { path = "../display-bytes" }
from-to-repr = { version = "0.2.2", features = ["from_to_other"] }
lzxd = { version = "0.2" }
tracing = { version = "0.1" }

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
