[package]
name = "winunpack-win"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
from-to-repr = { version = "0.2", features = ["from_to_other"] }
libc = "0.2.178"
sxd-document = { version = "0.3" }
windows-core = { version = "0.62", default-features = false }
windows-implement = { version = "0.60" }
z7_com = { path = "../z7_com" }

[dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
]
default-features = false
