[package]
name = "winunpack"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
from-to-repr = { version = "0.2", features = ["from_to_other"] }
libcdio-sys = { version = "2.0" }
sxd-document = { version = "0.3" }
tempfile = { version = "3.24" }
wimlib = { version = "0.3" }
