[package]
name = "z7_com"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-core = { version = "0.62" }

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
]

[build-dependencies]
windows-bindgen = { version = "0.65" }
